//
//  GarmentUITests.swift
//  GarmentUITests
//
//  Created by endOfLine on 7/24/21.
//

import XCTest

class GarmentUITests: XCTestCase {
    
    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testAddGarment() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        let addGarmentButton = app.buttons["addGarmentButton"]
        addGarmentButton.tap()
        
        let addGarmentNavTitle = app.staticTexts["ADD"]
        XCTAssert(addGarmentNavTitle.waitForExistence(timeout: 0.5))
        
        let garmentTitleField = app.textFields["garmentTitleField"]
        garmentTitleField.tap()
        garmentTitleField.typeText("test")
        
        let saveGarmentButton = app.buttons["saveGarmentButton"]
        saveGarmentButton.tap()
        
        XCTAssertFalse(addGarmentNavTitle.waitForExistence(timeout: 0.5))
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
